Add Vaadin Studio as recommendation for new projects

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "runem.lit-plugin",
     "vscjava.vscode-java-pack",
     "pivotal.vscode-spring-boot",
+    "vaadin.studio"
   ],
   "unwantedRecommendations": []
 }
