--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "2.4.0",
+      "lit-element": "2.5.0",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
       "@vaadin/vaadin-crud": "1.3.0",
-      "@vaadin/vaadin-grid": "5.7.12",
+      "@vaadin/vaadin-grid": "5.7.13",
       "@vaadin/vaadin-icons": "4.3.2",
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.6.0-beta2",
+      "@vaadin/vaadin-core-shrinkwrap": "14.6.0-rc1",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -21,9 +21,9 @@
       "@vaadin/vaadin-board": "2.2.0",
       "@vaadin/vaadin-charts": "6.3.1",
       "@vaadin/vaadin-notification": "1.6.1",
-      "@vaadin/vaadin-grid-pro": "2.3.0-beta1",
+      "@vaadin/vaadin-grid-pro": "2.3.0-rc1",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "14.6.0-beta2",
+      "@vaadin/vaadin-shrinkwrap": "14.6.0-rc1",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
@@ -47,7 +47,8 @@
       "@vaadin/vaadin-lumo-styles": "1.6.0",
       "@vaadin/vaadin-material-styles": "1.3.2",
       "@vaadin/vaadin-rich-text-editor": "1.3.0",
-      "@vaadin/vaadin-avatar": "1.0.4"
+      "@vaadin/vaadin-avatar": "1.0.4",
+      "lit-html": "1.4.0"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -68,7 +69,7 @@
       "construct-style-sheets-polyfill": "2.4.6",
       "extract-loader": "5.1.0"
     },
-    "hash": "4866d69989250f546469c8a0ea3d3d12272dcd13877bd428060857ede8631103"
+    "hash": "57befec4b64aec880c4d00ea7286fcf1e45c18c7a561e2f79194245f80b9dcf2"
   },
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
@@ -85,7 +86,7 @@
     "@vaadin/vaadin-confirm-dialog": "1.3.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
     "@vaadin/vaadin-cookie-consent": "1.2.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.6.0-beta2",
+    "@vaadin/vaadin-core-shrinkwrap": "14.6.0-rc1",
     "@vaadin/vaadin-crud": "1.3.0",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
@@ -93,8 +94,8 @@
     "@vaadin/vaadin-details": "1.2.0",
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-form-layout": "2.3.0",
-    "@vaadin/vaadin-grid": "5.7.12",
-    "@vaadin/vaadin-grid-pro": "2.3.0-beta1",
+    "@vaadin/vaadin-grid": "5.7.13",
+    "@vaadin/vaadin-grid-pro": "2.3.0-rc1",
     "@vaadin/vaadin-icons": "4.3.2",
     "@vaadin/vaadin-item": "2.3.0",
     "@vaadin/vaadin-list-box": "1.4.0",
@@ -108,14 +109,15 @@
     "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-rich-text-editor": "1.3.0",
     "@vaadin/vaadin-select": "2.4.0",
-    "@vaadin/vaadin-shrinkwrap": "14.6.0-beta2",
+    "@vaadin/vaadin-shrinkwrap": "14.6.0-rc1",
     "@vaadin/vaadin-split-layout": "4.3.0",
     "@vaadin/vaadin-tabs": "3.2.0",
     "@vaadin/vaadin-text-field": "2.8.4",
     "@vaadin/vaadin-time-picker": "2.4.0",
     "@vaadin/vaadin-upload": "4.4.1",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "lit-element": "2.4.0"
+    "lit-element": "2.5.0",
+    "lit-html": "1.4.0"
   },
   "devDependencies": {
     "chokidar": "^3.5.0",
