--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.6.0-rc1",
+      "@vaadin/vaadin-core-shrinkwrap": "14.7.0-alpha1",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -23,7 +23,7 @@
       "@vaadin/vaadin-notification": "1.6.1",
       "@vaadin/vaadin-grid-pro": "2.3.0-rc1",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "14.6.0-rc1",
+      "@vaadin/vaadin-shrinkwrap": "14.7.0-alpha1",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
@@ -69,7 +69,7 @@
       "construct-style-sheets-polyfill": "2.4.6",
       "extract-loader": "5.1.0"
     },
-    "hash": "57befec4b64aec880c4d00ea7286fcf1e45c18c7a561e2f79194245f80b9dcf2"
+    "hash": "3cacc4b9f7f67644ff25022abcca6c5f28e01ffd4f5cf0b224c68f1487047f28"
   },
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
@@ -86,7 +86,7 @@
     "@vaadin/vaadin-confirm-dialog": "1.3.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
     "@vaadin/vaadin-cookie-consent": "1.2.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.6.0-rc1",
+    "@vaadin/vaadin-core-shrinkwrap": "14.7.0-alpha1",
     "@vaadin/vaadin-crud": "1.3.0",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
@@ -109,7 +109,7 @@
     "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-rich-text-editor": "1.3.0",
     "@vaadin/vaadin-select": "2.4.0",
-    "@vaadin/vaadin-shrinkwrap": "14.6.0-rc1",
+    "@vaadin/vaadin-shrinkwrap": "14.7.0-alpha1",
     "@vaadin/vaadin-split-layout": "4.3.0",
     "@vaadin/vaadin-tabs": "3.2.0",
     "@vaadin/vaadin-text-field": "2.8.4",
