--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <vaadin.version>14.6.0.rc1</vaadin.version>
+        <vaadin.version>14.7.0.alpha1</vaadin.version>
     </properties>
 
     <parent>
