--- a/package.json
+++ b/package.json
@@ -8,49 +8,49 @@
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "./target/flow-frontend/form",
     "@vaadin/router": "1.7.2",
-    "@vaadin/vaadin-accordion": "20.0.0-beta1",
-    "@vaadin/vaadin-app-layout": "20.0.0-beta1",
-    "@vaadin/vaadin-avatar": "20.0.0-beta1",
-    "@vaadin/vaadin-board": "20.0.0-beta1",
-    "@vaadin/vaadin-button": "20.0.0-beta1",
-    "@vaadin/vaadin-charts": "20.0.0-beta1",
-    "@vaadin/vaadin-checkbox": "20.0.0-beta1",
-    "@vaadin/vaadin-combo-box": "20.0.0-beta1",
-    "@vaadin/vaadin-confirm-dialog": "20.0.0-beta1",
-    "@vaadin/vaadin-context-menu": "20.0.0-beta1",
-    "@vaadin/vaadin-cookie-consent": "20.0.0-beta1",
-    "@vaadin/vaadin-core-shrinkwrap": "20.0.0-beta1",
-    "@vaadin/vaadin-crud": "20.0.0-beta1",
-    "@vaadin/vaadin-custom-field": "20.0.0-beta1",
-    "@vaadin/vaadin-date-picker": "20.0.0-beta1",
-    "@vaadin/vaadin-date-time-picker": "20.0.0-beta1",
-    "@vaadin/vaadin-details": "20.0.0-beta1",
-    "@vaadin/vaadin-dialog": "20.0.0-beta1",
-    "@vaadin/vaadin-form-layout": "20.0.0-beta1",
-    "@vaadin/vaadin-grid": "20.0.0-beta1",
-    "@vaadin/vaadin-grid-pro": "20.0.0-beta1",
-    "@vaadin/vaadin-icons": "20.0.0-beta1",
-    "@vaadin/vaadin-item": "20.0.0-beta1",
-    "@vaadin/vaadin-list-box": "20.0.0-beta1",
-    "@vaadin/vaadin-login": "20.0.0-beta1",
-    "@vaadin/vaadin-lumo-styles": "20.0.0-beta1",
-    "@vaadin/vaadin-material-styles": "20.0.0-beta1",
-    "@vaadin/vaadin-menu-bar": "20.0.0-beta1",
-    "@vaadin/vaadin-notification": "20.0.0-beta1",
-    "@vaadin/vaadin-ordered-layout": "20.0.0-beta1",
-    "@vaadin/vaadin-progress-bar": "20.0.0-beta1",
-    "@vaadin/vaadin-radio-button": "20.0.0-beta1",
-    "@vaadin/vaadin-rich-text-editor": "20.0.0-beta1",
-    "@vaadin/vaadin-select": "20.0.0-beta1",
-    "@vaadin/vaadin-shrinkwrap": "20.0.0-beta1",
-    "@vaadin/vaadin-split-layout": "20.0.0-beta1",
-    "@vaadin/vaadin-tabs": "20.0.0-beta1",
-    "@vaadin/vaadin-text-field": "20.0.0-beta1",
-    "@vaadin/vaadin-time-picker": "20.0.0-beta1",
-    "@vaadin/vaadin-upload": "20.0.0-beta1",
-    "lit-element": "2.5.0",
-    "@vaadin/vaadin-messages": "20.0.0-beta1",
-    "lit-html": "1.4.0"
+    "@vaadin/vaadin-accordion": "21.0.0-alpha2",
+    "@vaadin/vaadin-app-layout": "21.0.0-alpha2",
+    "@vaadin/vaadin-avatar": "21.0.0-alpha2",
+    "@vaadin/vaadin-board": "21.0.0-alpha2",
+    "@vaadin/vaadin-button": "21.0.0-alpha2",
+    "@vaadin/vaadin-charts": "21.0.0-alpha2",
+    "@vaadin/vaadin-checkbox": "21.0.0-alpha2",
+    "@vaadin/vaadin-combo-box": "21.0.0-alpha2",
+    "@vaadin/vaadin-confirm-dialog": "21.0.0-alpha2",
+    "@vaadin/vaadin-context-menu": "21.0.0-alpha2",
+    "@vaadin/vaadin-cookie-consent": "21.0.0-alpha2",
+    "@vaadin/vaadin-core-shrinkwrap": "21.0.0-alpha1",
+    "@vaadin/vaadin-crud": "21.0.0-alpha2",
+    "@vaadin/vaadin-custom-field": "21.0.0-alpha2",
+    "@vaadin/vaadin-date-picker": "21.0.0-alpha2",
+    "@vaadin/vaadin-date-time-picker": "21.0.0-alpha2",
+    "@vaadin/vaadin-details": "21.0.0-alpha2",
+    "@vaadin/vaadin-dialog": "21.0.0-alpha2",
+    "@vaadin/vaadin-form-layout": "21.0.0-alpha2",
+    "@vaadin/vaadin-grid": "21.0.0-alpha2",
+    "@vaadin/vaadin-grid-pro": "21.0.0-alpha2",
+    "@vaadin/vaadin-icons": "21.0.0-alpha2",
+    "@vaadin/vaadin-item": "21.0.0-alpha2",
+    "@vaadin/vaadin-list-box": "21.0.0-alpha2",
+    "@vaadin/vaadin-login": "21.0.0-alpha2",
+    "@vaadin/vaadin-lumo-styles": "21.0.0-alpha2",
+    "@vaadin/vaadin-material-styles": "21.0.0-alpha2",
+    "@vaadin/vaadin-menu-bar": "21.0.0-alpha2",
+    "@vaadin/vaadin-notification": "21.0.0-alpha2",
+    "@vaadin/vaadin-ordered-layout": "21.0.0-alpha2",
+    "@vaadin/vaadin-progress-bar": "21.0.0-alpha2",
+    "@vaadin/vaadin-radio-button": "21.0.0-alpha2",
+    "@vaadin/vaadin-rich-text-editor": "21.0.0-alpha2",
+    "@vaadin/vaadin-select": "21.0.0-alpha2",
+    "@vaadin/vaadin-shrinkwrap": "21.0.0-alpha1",
+    "@vaadin/vaadin-split-layout": "21.0.0-alpha2",
+    "@vaadin/vaadin-tabs": "21.0.0-alpha2",
+    "@vaadin/vaadin-text-field": "21.0.0-alpha2",
+    "@vaadin/vaadin-time-picker": "21.0.0-alpha2",
+    "@vaadin/vaadin-upload": "21.0.0-alpha2",
+    "@vaadin/vaadin-messages": "21.0.0-alpha2",
+    "lit": "2.0.0-rc.1",
+    "@vaadin/vaadin-template-renderer": "21.0.0-alpha2"
   },
   "devDependencies": {
     "@types/validator": "13.1.0",
@@ -88,49 +88,49 @@
       "@polymer/iron-list": "3.1.0",
       "@polymer/polymer": "3.2.0",
       "@vaadin/router": "1.7.2",
-      "@vaadin/vaadin-accordion": "20.0.0-beta1",
-      "@vaadin/vaadin-app-layout": "20.0.0-beta1",
-      "@vaadin/vaadin-avatar": "20.0.0-beta1",
-      "@vaadin/vaadin-board": "20.0.0-beta1",
-      "@vaadin/vaadin-button": "20.0.0-beta1",
-      "@vaadin/vaadin-charts": "20.0.0-beta1",
-      "@vaadin/vaadin-checkbox": "20.0.0-beta1",
-      "@vaadin/vaadin-combo-box": "20.0.0-beta1",
-      "@vaadin/vaadin-confirm-dialog": "20.0.0-beta1",
-      "@vaadin/vaadin-context-menu": "20.0.0-beta1",
-      "@vaadin/vaadin-cookie-consent": "20.0.0-beta1",
-      "@vaadin/vaadin-core-shrinkwrap": "20.0.0-beta1",
-      "@vaadin/vaadin-crud": "20.0.0-beta1",
-      "@vaadin/vaadin-custom-field": "20.0.0-beta1",
-      "@vaadin/vaadin-date-picker": "20.0.0-beta1",
-      "@vaadin/vaadin-date-time-picker": "20.0.0-beta1",
-      "@vaadin/vaadin-details": "20.0.0-beta1",
-      "@vaadin/vaadin-dialog": "20.0.0-beta1",
-      "@vaadin/vaadin-form-layout": "20.0.0-beta1",
-      "@vaadin/vaadin-grid": "20.0.0-beta1",
-      "@vaadin/vaadin-grid-pro": "20.0.0-beta1",
-      "@vaadin/vaadin-icons": "20.0.0-beta1",
-      "@vaadin/vaadin-item": "20.0.0-beta1",
-      "@vaadin/vaadin-list-box": "20.0.0-beta1",
-      "@vaadin/vaadin-login": "20.0.0-beta1",
-      "@vaadin/vaadin-lumo-styles": "20.0.0-beta1",
-      "@vaadin/vaadin-material-styles": "20.0.0-beta1",
-      "@vaadin/vaadin-menu-bar": "20.0.0-beta1",
-      "@vaadin/vaadin-notification": "20.0.0-beta1",
-      "@vaadin/vaadin-ordered-layout": "20.0.0-beta1",
-      "@vaadin/vaadin-progress-bar": "20.0.0-beta1",
-      "@vaadin/vaadin-radio-button": "20.0.0-beta1",
-      "@vaadin/vaadin-rich-text-editor": "20.0.0-beta1",
-      "@vaadin/vaadin-select": "20.0.0-beta1",
-      "@vaadin/vaadin-shrinkwrap": "20.0.0-beta1",
-      "@vaadin/vaadin-split-layout": "20.0.0-beta1",
-      "@vaadin/vaadin-tabs": "20.0.0-beta1",
-      "@vaadin/vaadin-text-field": "20.0.0-beta1",
-      "@vaadin/vaadin-time-picker": "20.0.0-beta1",
-      "@vaadin/vaadin-upload": "20.0.0-beta1",
-      "lit-element": "2.5.0",
-      "@vaadin/vaadin-messages": "20.0.0-beta1",
-      "lit-html": "1.4.0"
+      "@vaadin/vaadin-accordion": "21.0.0-alpha2",
+      "@vaadin/vaadin-app-layout": "21.0.0-alpha2",
+      "@vaadin/vaadin-avatar": "21.0.0-alpha2",
+      "@vaadin/vaadin-board": "21.0.0-alpha2",
+      "@vaadin/vaadin-button": "21.0.0-alpha2",
+      "@vaadin/vaadin-charts": "21.0.0-alpha2",
+      "@vaadin/vaadin-checkbox": "21.0.0-alpha2",
+      "@vaadin/vaadin-combo-box": "21.0.0-alpha2",
+      "@vaadin/vaadin-confirm-dialog": "21.0.0-alpha2",
+      "@vaadin/vaadin-context-menu": "21.0.0-alpha2",
+      "@vaadin/vaadin-cookie-consent": "21.0.0-alpha2",
+      "@vaadin/vaadin-core-shrinkwrap": "21.0.0-alpha1",
+      "@vaadin/vaadin-crud": "21.0.0-alpha2",
+      "@vaadin/vaadin-custom-field": "21.0.0-alpha2",
+      "@vaadin/vaadin-date-picker": "21.0.0-alpha2",
+      "@vaadin/vaadin-date-time-picker": "21.0.0-alpha2",
+      "@vaadin/vaadin-details": "21.0.0-alpha2",
+      "@vaadin/vaadin-dialog": "21.0.0-alpha2",
+      "@vaadin/vaadin-form-layout": "21.0.0-alpha2",
+      "@vaadin/vaadin-grid": "21.0.0-alpha2",
+      "@vaadin/vaadin-grid-pro": "21.0.0-alpha2",
+      "@vaadin/vaadin-icons": "21.0.0-alpha2",
+      "@vaadin/vaadin-item": "21.0.0-alpha2",
+      "@vaadin/vaadin-list-box": "21.0.0-alpha2",
+      "@vaadin/vaadin-login": "21.0.0-alpha2",
+      "@vaadin/vaadin-lumo-styles": "21.0.0-alpha2",
+      "@vaadin/vaadin-material-styles": "21.0.0-alpha2",
+      "@vaadin/vaadin-menu-bar": "21.0.0-alpha2",
+      "@vaadin/vaadin-notification": "21.0.0-alpha2",
+      "@vaadin/vaadin-ordered-layout": "21.0.0-alpha2",
+      "@vaadin/vaadin-progress-bar": "21.0.0-alpha2",
+      "@vaadin/vaadin-radio-button": "21.0.0-alpha2",
+      "@vaadin/vaadin-rich-text-editor": "21.0.0-alpha2",
+      "@vaadin/vaadin-select": "21.0.0-alpha2",
+      "@vaadin/vaadin-shrinkwrap": "21.0.0-alpha1",
+      "@vaadin/vaadin-split-layout": "21.0.0-alpha2",
+      "@vaadin/vaadin-tabs": "21.0.0-alpha2",
+      "@vaadin/vaadin-text-field": "21.0.0-alpha2",
+      "@vaadin/vaadin-time-picker": "21.0.0-alpha2",
+      "@vaadin/vaadin-upload": "21.0.0-alpha2",
+      "@vaadin/vaadin-messages": "21.0.0-alpha2",
+      "lit": "2.0.0-rc.1",
+      "@vaadin/vaadin-template-renderer": "21.0.0-alpha2"
     },
     "devDependencies": {
       "@types/validator": "13.1.0",
@@ -158,6 +158,6 @@
       "workbox-webpack-plugin": "6.1.0",
       "fork-ts-checker-webpack-plugin": "6.2.1"
     },
-    "hash": "b0be09df8d690b15a5a5bdb90a429ddd644d25106fcbd13a62b214cf82fa6c96"
+    "hash": "8cf996e0fb585db89b759751db31194bc2dc868b84ad236717071b0542bd6aab"
   }
 }
