--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "2.5.0",
+      "lit-element": "2.5.1",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
       "@vaadin/vaadin-crud": "1.3.0",
@@ -12,7 +12,7 @@
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.7.0-alpha1",
+      "@vaadin/vaadin-core-shrinkwrap": "14.7.0-alpha2",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -21,9 +21,9 @@
       "@vaadin/vaadin-board": "2.2.0",
       "@vaadin/vaadin-charts": "6.3.1",
       "@vaadin/vaadin-notification": "1.6.1",
-      "@vaadin/vaadin-grid-pro": "2.3.0-rc1",
+      "@vaadin/vaadin-grid-pro": "2.3.0",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "14.7.0-alpha1",
+      "@vaadin/vaadin-shrinkwrap": "14.7.0-alpha2",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
@@ -44,11 +44,13 @@
       "@vaadin/vaadin-context-menu": "4.5.0",
       "@vaadin/vaadin-radio-button": "1.5.1",
       "@vaadin/vaadin-tabs": "3.2.0",
-      "@vaadin/vaadin-lumo-styles": "1.6.0",
+      "@vaadin/vaadin-lumo-styles": "1.6.1",
       "@vaadin/vaadin-material-styles": "1.3.2",
       "@vaadin/vaadin-rich-text-editor": "1.3.0",
       "@vaadin/vaadin-avatar": "1.0.4",
-      "lit-html": "1.4.0"
+      "lit-html": "1.4.1",
+      "construct-style-sheets-polyfill": "2.4.16",
+      "@vaadin/vaadin-messages": "1.0.1"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -69,7 +71,7 @@
       "construct-style-sheets-polyfill": "2.4.6",
       "extract-loader": "5.1.0"
     },
-    "hash": "3cacc4b9f7f67644ff25022abcca6c5f28e01ffd4f5cf0b224c68f1487047f28"
+    "hash": "bcc24b07f5ea56b90d25e5e1dc3fd65f909bff8773d99368be355a3ae45d7ad8"
   },
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
@@ -86,7 +88,7 @@
     "@vaadin/vaadin-confirm-dialog": "1.3.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
     "@vaadin/vaadin-cookie-consent": "1.2.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.7.0-alpha1",
+    "@vaadin/vaadin-core-shrinkwrap": "14.7.0-alpha2",
     "@vaadin/vaadin-crud": "1.3.0",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
@@ -95,12 +97,12 @@
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-form-layout": "2.3.0",
     "@vaadin/vaadin-grid": "5.7.13",
-    "@vaadin/vaadin-grid-pro": "2.3.0-rc1",
+    "@vaadin/vaadin-grid-pro": "2.3.0",
     "@vaadin/vaadin-icons": "4.3.2",
     "@vaadin/vaadin-item": "2.3.0",
     "@vaadin/vaadin-list-box": "1.4.0",
     "@vaadin/vaadin-login": "1.2.0",
-    "@vaadin/vaadin-lumo-styles": "1.6.0",
+    "@vaadin/vaadin-lumo-styles": "1.6.1",
     "@vaadin/vaadin-material-styles": "1.3.2",
     "@vaadin/vaadin-menu-bar": "1.2.2",
     "@vaadin/vaadin-notification": "1.6.1",
@@ -109,15 +111,17 @@
     "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-rich-text-editor": "1.3.0",
     "@vaadin/vaadin-select": "2.4.0",
-    "@vaadin/vaadin-shrinkwrap": "14.7.0-alpha1",
+    "@vaadin/vaadin-shrinkwrap": "14.7.0-alpha2",
     "@vaadin/vaadin-split-layout": "4.3.0",
     "@vaadin/vaadin-tabs": "3.2.0",
     "@vaadin/vaadin-text-field": "2.8.4",
     "@vaadin/vaadin-time-picker": "2.4.0",
     "@vaadin/vaadin-upload": "4.4.1",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "lit-element": "2.5.0",
-    "lit-html": "1.4.0"
+    "lit-element": "2.5.1",
+    "lit-html": "1.4.1",
+    "construct-style-sheets-polyfill": "2.4.16",
+    "@vaadin/vaadin-messages": "1.0.1"
   },
   "devDependencies": {
     "chokidar": "^3.5.0",
