--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <java.version>1.8</java.version>
         <vaadin.version>21.0.0.beta2</vaadin.version>
+        <flow.version>8.0.0.rc1</flow.version>
     </properties>
 
     <parent>
@@ -66,6 +67,13 @@
 
     <dependencyManagement>
         <dependencies>
+             <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>flow-bom</artifactId>
+                <version>${flow.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-bom</artifactId>
