--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@adobe/lit-mobx": "2.0.0-rc.4",
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-list": "3.1.0",
     "@polymer/polymer": "3.2.0",
@@ -51,7 +52,8 @@
     "@vaadin/vaadin-upload": "21.0.0-beta2",
     "@vaadin/vaadin-virtual-list": "21.0.0-beta2",
     "construct-style-sheets-polyfill": "2.4.16",
-    "lit": "2.0.0-rc.2"
+    "lit": "2.0.0-rc.2",
+    "mobx": "^6.1.5"
   },
   "devDependencies": {
     "@types/validator": "13.1.0",
@@ -86,6 +88,7 @@
   "name": "no-name",
   "vaadin": {
     "dependencies": {
+      "@adobe/lit-mobx": "2.0.0-rc.4",
       "@polymer/iron-icon": "3.0.1",
       "@polymer/iron-list": "3.1.0",
       "@polymer/polymer": "3.2.0",
@@ -135,7 +138,8 @@
       "@vaadin/vaadin-upload": "21.0.0-beta2",
       "@vaadin/vaadin-virtual-list": "21.0.0-beta2",
       "construct-style-sheets-polyfill": "2.4.16",
-      "lit": "2.0.0-rc.2"
+      "lit": "2.0.0-rc.2",
+      "mobx": "^6.1.5"
     },
     "devDependencies": {
       "@types/validator": "13.1.0",
