Revert "Update Vaadin to 21.0.0.rc2 (#603)"
This reverts commit c53789bc1bf2a706fa4722783392a7bf0675124d.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@adobe/lit-mobx": "2.0.0-rc.4",
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-list": "3.1.0",
     "@polymer/polymer": "3.2.0",
@@ -17,7 +18,7 @@
     "@vaadin/vaadin-confirm-dialog": "21.0.0-rc1",
     "@vaadin/vaadin-context-menu": "21.0.0-rc1",
     "@vaadin/vaadin-cookie-consent": "21.0.0-rc1",
-    "@vaadin/vaadin-core-shrinkwrap": "21.0.0-rc2",
+    "@vaadin/vaadin-core-shrinkwrap": "21.0.0-rc1",
     "@vaadin/vaadin-crud": "21.0.0-rc1",
     "@vaadin/vaadin-custom-field": "21.0.0-rc1",
     "@vaadin/vaadin-date-picker": "21.0.0-rc1",
@@ -42,7 +43,7 @@
     "@vaadin/vaadin-radio-button": "21.0.0-rc1",
     "@vaadin/vaadin-rich-text-editor": "21.0.0-rc1",
     "@vaadin/vaadin-select": "21.0.0-rc1",
-    "@vaadin/vaadin-shrinkwrap": "21.0.0-rc2",
+    "@vaadin/vaadin-shrinkwrap": "21.0.0-rc1",
     "@vaadin/vaadin-split-layout": "21.0.0-rc1",
     "@vaadin/vaadin-tabs": "21.0.0-rc1",
     "@vaadin/vaadin-template-renderer": "21.0.0-rc1",
@@ -51,7 +52,8 @@
     "@vaadin/vaadin-upload": "21.0.0-rc1",
     "@vaadin/vaadin-virtual-list": "21.0.0-rc1",
     "construct-style-sheets-polyfill": "2.4.16",
-    "lit": "2.0.0-rc.3"
+    "lit": "2.0.0-rc.2",
+    "mobx": "^6.1.5"
   },
   "devDependencies": {
     "@types/validator": "13.1.0",
@@ -86,6 +88,7 @@
   "name": "no-name",
   "vaadin": {
     "dependencies": {
+      "@adobe/lit-mobx": "2.0.0-rc.4",
       "@polymer/iron-icon": "3.0.1",
       "@polymer/iron-list": "3.1.0",
       "@polymer/polymer": "3.2.0",
@@ -101,7 +104,7 @@
       "@vaadin/vaadin-confirm-dialog": "21.0.0-rc1",
       "@vaadin/vaadin-context-menu": "21.0.0-rc1",
       "@vaadin/vaadin-cookie-consent": "21.0.0-rc1",
-      "@vaadin/vaadin-core-shrinkwrap": "21.0.0-rc2",
+      "@vaadin/vaadin-core-shrinkwrap": "21.0.0-rc1",
       "@vaadin/vaadin-crud": "21.0.0-rc1",
       "@vaadin/vaadin-custom-field": "21.0.0-rc1",
       "@vaadin/vaadin-date-picker": "21.0.0-rc1",
@@ -126,7 +129,7 @@
       "@vaadin/vaadin-radio-button": "21.0.0-rc1",
       "@vaadin/vaadin-rich-text-editor": "21.0.0-rc1",
       "@vaadin/vaadin-select": "21.0.0-rc1",
-      "@vaadin/vaadin-shrinkwrap": "21.0.0-rc2",
+      "@vaadin/vaadin-shrinkwrap": "21.0.0-rc1",
       "@vaadin/vaadin-split-layout": "21.0.0-rc1",
       "@vaadin/vaadin-tabs": "21.0.0-rc1",
       "@vaadin/vaadin-template-renderer": "21.0.0-rc1",
@@ -135,7 +138,8 @@
       "@vaadin/vaadin-upload": "21.0.0-rc1",
       "@vaadin/vaadin-virtual-list": "21.0.0-rc1",
       "construct-style-sheets-polyfill": "2.4.16",
-      "lit": "2.0.0-rc.3"
+      "lit": "2.0.0-rc.2",
+      "mobx": "^6.1.5"
     },
     "devDependencies": {
       "@types/validator": "13.1.0",
@@ -162,6 +166,6 @@
       "workbox-precaching": "6.2.0",
       "workbox-webpack-plugin": "6.2.0"
     },
-    "hash": "3a8ed02a0c05befa4dfed1e82e8b855b2459f784987ca6eae00650bcb6aea2b4"
+    "hash": "709df11d9dfc3d6cc144e565cef1d09f4a46ab53cd5832f472a12545cfa3abe5"
   }
 }
