--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <vaadin.version>14.7.0.rc1</vaadin.version>
+        <vaadin.version>14.7.0</vaadin.version>
     </properties>
 
     <parent>
