--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-list": "3.1.0",
     "@polymer/polymer": "3.2.0",
-    "@vaadin/common-frontend": "0.0.16",
     "@vaadin/flow-frontend": "./target/flow-frontend",
-    "@vaadin/form": "0.0.14",
-    "@vaadin/fusion-frontend": "0.0.14",
+    "@vaadin/form": "./target/flow-frontend/form",
     "@vaadin/router": "1.7.4",
     "@vaadin/vaadin-accordion": "22.0.0-alpha6",
     "@vaadin/vaadin-app-layout": "22.0.0-alpha6",
@@ -19,7 +17,7 @@
     "@vaadin/vaadin-confirm-dialog": "22.0.0-alpha6",
     "@vaadin/vaadin-context-menu": "22.0.0-alpha6",
     "@vaadin/vaadin-cookie-consent": "22.0.0-alpha6",
-    "@vaadin/vaadin-core-shrinkwrap": "22.0.0-alpha5",
+    "@vaadin/vaadin-core-shrinkwrap": "22.0.0-alpha4",
     "@vaadin/vaadin-crud": "22.0.0-alpha6",
     "@vaadin/vaadin-custom-field": "22.0.0-alpha6",
     "@vaadin/vaadin-date-picker": "22.0.0-alpha6",
@@ -44,7 +42,7 @@
     "@vaadin/vaadin-radio-button": "22.0.0-alpha6",
     "@vaadin/vaadin-rich-text-editor": "22.0.0-alpha6",
     "@vaadin/vaadin-select": "22.0.0-alpha6",
-    "@vaadin/vaadin-shrinkwrap": "22.0.0-alpha5",
+    "@vaadin/vaadin-shrinkwrap": "22.0.0-alpha4",
     "@vaadin/vaadin-split-layout": "22.0.0-alpha6",
     "@vaadin/vaadin-tabs": "22.0.0-alpha6",
     "@vaadin/vaadin-template-renderer": "22.0.0-alpha6",
@@ -54,11 +52,11 @@
     "@vaadin/vaadin-virtual-list": "22.0.0-alpha6",
     "construct-style-sheets-polyfill": "2.4.16",
     "date-fns": "2.23.0",
-    "lit": "2.0.0"
+    "lit": "2.0.0-rc.4"
   },
   "devDependencies": {
+    "@types/validator": "13.1.0",
     "@vaadin/application-theme-plugin": "./target/plugins/application-theme-plugin",
-    "@vaadin/build-status-plugin": "./target/plugins/build-status-plugin",
     "@vaadin/stats-plugin": "./target/plugins/stats-plugin",
     "@vaadin/theme-live-reload-plugin": "./target/plugins/theme-live-reload-plugin",
     "@vaadin/theme-loader": "./target/plugins/theme-loader",
@@ -75,9 +73,10 @@
     "lit-css-loader": "0.1.0",
     "loader-utils": "2.0.0",
     "typescript": "4.4.3",
+    "validator": "13.1.17",
     "webpack": "4.46.0",
-    "webpack-cli": "4.8.0",
-    "webpack-dev-server": "4.1.1",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "3.0.0",
     "webpack-merge": "4.2.2",
     "workbox-core": "6.2.0",
@@ -91,9 +90,6 @@
       "@polymer/iron-icon": "3.0.1",
       "@polymer/iron-list": "3.1.0",
       "@polymer/polymer": "3.2.0",
-      "@vaadin/common-frontend": "0.0.16",
-      "@vaadin/form": "0.0.14",
-      "@vaadin/fusion-frontend": "0.0.14",
       "@vaadin/router": "1.7.4",
       "@vaadin/vaadin-accordion": "22.0.0-alpha6",
       "@vaadin/vaadin-app-layout": "22.0.0-alpha6",
@@ -106,7 +102,7 @@
       "@vaadin/vaadin-confirm-dialog": "22.0.0-alpha6",
       "@vaadin/vaadin-context-menu": "22.0.0-alpha6",
       "@vaadin/vaadin-cookie-consent": "22.0.0-alpha6",
-      "@vaadin/vaadin-core-shrinkwrap": "22.0.0-alpha5",
+      "@vaadin/vaadin-core-shrinkwrap": "22.0.0-alpha4",
       "@vaadin/vaadin-crud": "22.0.0-alpha6",
       "@vaadin/vaadin-custom-field": "22.0.0-alpha6",
       "@vaadin/vaadin-date-picker": "22.0.0-alpha6",
@@ -131,7 +127,7 @@
       "@vaadin/vaadin-radio-button": "22.0.0-alpha6",
       "@vaadin/vaadin-rich-text-editor": "22.0.0-alpha6",
       "@vaadin/vaadin-select": "22.0.0-alpha6",
-      "@vaadin/vaadin-shrinkwrap": "22.0.0-alpha5",
+      "@vaadin/vaadin-shrinkwrap": "22.0.0-alpha4",
       "@vaadin/vaadin-split-layout": "22.0.0-alpha6",
       "@vaadin/vaadin-tabs": "22.0.0-alpha6",
       "@vaadin/vaadin-template-renderer": "22.0.0-alpha6",
@@ -141,9 +137,10 @@
       "@vaadin/vaadin-virtual-list": "22.0.0-alpha6",
       "construct-style-sheets-polyfill": "2.4.16",
       "date-fns": "2.23.0",
-      "lit": "2.0.0"
+      "lit": "2.0.0-rc.4"
     },
     "devDependencies": {
+      "@types/validator": "13.1.0",
       "chokidar": "^3.5.0",
       "compression-webpack-plugin": "4.0.1",
       "css-loader": "4.2.1",
@@ -157,15 +154,16 @@
       "lit-css-loader": "0.1.0",
       "loader-utils": "2.0.0",
       "typescript": "4.4.3",
+      "validator": "13.1.17",
       "webpack": "4.46.0",
-      "webpack-cli": "4.8.0",
-      "webpack-dev-server": "4.1.1",
+      "webpack-cli": "3.3.12",
+      "webpack-dev-server": "3.11.0",
       "webpack-manifest-plugin": "3.0.0",
       "webpack-merge": "4.2.2",
       "workbox-core": "6.2.0",
       "workbox-precaching": "6.2.0",
       "workbox-webpack-plugin": "6.2.0"
     },
-    "hash": "20ea36ff6e0efd309342b186fac36d8db12949692aa85b17490bf24849d16adc"
+    "hash": "d1a1dfb91a920d7bcca74d2826ab4726d73a21c25c88fb831b96cffbd5b1d80d"
   }
 }
