Remove Vaadin Studio recommendation
Remove it until we resume development

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,8 +2,7 @@
   "recommendations": [
     "runem.lit-plugin",
     "vscjava.vscode-java-pack",
-    "pivotal.vscode-spring-boot",
-    "vaadin.studio"
+    "pivotal.vscode-spring-boot"
   ],
   "unwantedRecommendations": []
 }
