Try some random fix

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,7 +13,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ v21, master, v[0-9][0-9] ]
+    branches: [ master, v[0-9][0-9](.*pre)? ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ v21 ]
