--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ master, v[0-9][0-9](.*pre)? ]
+    branches: [ master, 'v[0-9][0-9](.*pre)?' ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ v21 ]
+    branches: [ master, 'v[0-9][0-9](.*pre)?' ]
   schedule:
     - cron: '29 16 * * 6'
 
