--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <vaadin.version>22.0.0</vaadin.version>
+        <vaadin.version>23.0-SNAPSHOT</vaadin.version>
     </properties>
 
     <parent>
