--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <java.version>1.8</java.version>
         <vaadin.version>22.0.1</vaadin.version>
+        <log4j2.version>2.15.0</log4j2.version>
     </properties>
 
     <parent>
