--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 
 # The following files are generated/updated by vaadin-maven-plugin
 node_modules/
+pnpmfile.js
+
 
 # Browser drivers for local integration tests
 drivers/
