Update package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
+  "name": "no-name",
+  "license": "UNLICENSED",
   "dependencies": {
+    "@polymer/iron-a11y-announcer": "3.0.2",
     "@polymer/iron-icon": "3.0.1",
+    "@polymer/iron-iconset-svg": "3.0.1",
     "@polymer/iron-list": "3.1.0",
+    "@polymer/iron-media-query": "3.0.1",
+    "@polymer/iron-meta": "3.0.1",
+    "@polymer/iron-resizable-behavior": "3.0.1",
     "@polymer/polymer": "3.2.0",
     "@vaadin/accordion": "22.0.4",
     "@vaadin/app-layout": "22.0.4",
@@ -14,6 +21,7 @@
     "@vaadin/checkbox-group": "22.0.4",
     "@vaadin/combo-box": "22.0.4",
     "@vaadin/common-frontend": "0.0.17",
+    "@vaadin/component-base": "22.0.4",
     "@vaadin/confirm-dialog": "22.0.4",
     "@vaadin/context-menu": "22.0.4",
     "@vaadin/cookie-consent": "22.0.4",
@@ -24,6 +32,7 @@
     "@vaadin/details": "22.0.4",
     "@vaadin/dialog": "22.0.4",
     "@vaadin/email-field": "22.0.4",
+    "@vaadin/field-base": "22.0.4",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "0.0.15",
     "@vaadin/form-layout": "22.0.4",
@@ -33,6 +42,7 @@
     "@vaadin/horizontal-layout": "22.0.4",
     "@vaadin/icon": "22.0.4",
     "@vaadin/icons": "22.0.4",
+    "@vaadin/input-container": "22.0.4",
     "@vaadin/integer-field": "22.0.4",
     "@vaadin/item": "22.0.4",
     "@vaadin/list-box": "22.0.4",
@@ -73,6 +83,7 @@
     "@vaadin/vaadin-date-picker": "22.0.4",
     "@vaadin/vaadin-date-time-picker": "22.0.4",
     "@vaadin/vaadin-details": "22.0.4",
+    "@vaadin/vaadin-development-mode-detector": "2.0.5",
     "@vaadin/vaadin-dialog": "22.0.4",
     "@vaadin/vaadin-form-layout": "22.0.4",
     "@vaadin/vaadin-grid": "22.0.4",
@@ -81,6 +92,7 @@
     "@vaadin/vaadin-icons": "22.0.4",
     "@vaadin/vaadin-item": "22.0.4",
     "@vaadin/vaadin-list-box": "22.0.4",
+    "@vaadin/vaadin-list-mixin": "22.0.4",
     "@vaadin/vaadin-login": "22.0.4",
     "@vaadin/vaadin-lumo-styles": "22.0.4",
     "@vaadin/vaadin-material-styles": "22.0.4",
@@ -88,6 +100,7 @@
     "@vaadin/vaadin-messages": "22.0.4",
     "@vaadin/vaadin-notification": "22.0.4",
     "@vaadin/vaadin-ordered-layout": "22.0.4",
+    "@vaadin/vaadin-overlay": "22.0.4",
     "@vaadin/vaadin-progress-bar": "22.0.4",
     "@vaadin/vaadin-radio-button": "22.0.4",
     "@vaadin/vaadin-rich-text-editor": "22.0.4",
@@ -95,13 +108,16 @@
     "@vaadin/vaadin-shrinkwrap": "22.0.5",
     "@vaadin/vaadin-split-layout": "22.0.4",
     "@vaadin/vaadin-tabs": "22.0.4",
+    "@vaadin/vaadin-template-renderer": "22.0.4",
     "@vaadin/vaadin-text-field": "22.0.4",
     "@vaadin/vaadin-themable-mixin": "22.0.4",
     "@vaadin/vaadin-time-picker": "22.0.4",
     "@vaadin/vaadin-upload": "22.0.4",
+    "@vaadin/vaadin-usage-statistics": "2.1.2",
     "@vaadin/vaadin-virtual-list": "22.0.4",
     "@vaadin/vertical-layout": "22.0.4",
     "@vaadin/virtual-list": "22.0.4",
+    "@webcomponents/shadycss": "1.9.6",
     "construct-style-sheets-polyfill": "3.0.4",
     "date-fns": "2.23.0",
     "lit": "2.0.0"
@@ -132,12 +148,15 @@
     "workbox-precaching": "6.4.2",
     "workbox-webpack-plugin": "6.4.2"
   },
-  "license": "UNLICENSED",
-  "name": "no-name",
   "vaadin": {
     "dependencies": {
+      "@polymer/iron-a11y-announcer": "3.0.2",
       "@polymer/iron-icon": "3.0.1",
+      "@polymer/iron-iconset-svg": "3.0.1",
       "@polymer/iron-list": "3.1.0",
+      "@polymer/iron-media-query": "3.0.1",
+      "@polymer/iron-meta": "3.0.1",
+      "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.2.0",
       "@vaadin/accordion": "22.0.4",
       "@vaadin/app-layout": "22.0.4",
@@ -150,6 +169,7 @@
       "@vaadin/checkbox-group": "22.0.4",
       "@vaadin/combo-box": "22.0.4",
       "@vaadin/common-frontend": "0.0.17",
+      "@vaadin/component-base": "22.0.4",
       "@vaadin/confirm-dialog": "22.0.4",
       "@vaadin/context-menu": "22.0.4",
       "@vaadin/cookie-consent": "22.0.4",
@@ -160,6 +180,7 @@
       "@vaadin/details": "22.0.4",
       "@vaadin/dialog": "22.0.4",
       "@vaadin/email-field": "22.0.4",
+      "@vaadin/field-base": "22.0.4",
       "@vaadin/form": "0.0.15",
       "@vaadin/form-layout": "22.0.4",
       "@vaadin/fusion-frontend": "0.0.15",
@@ -168,6 +189,7 @@
       "@vaadin/horizontal-layout": "22.0.4",
       "@vaadin/icon": "22.0.4",
       "@vaadin/icons": "22.0.4",
+      "@vaadin/input-container": "22.0.4",
       "@vaadin/integer-field": "22.0.4",
       "@vaadin/item": "22.0.4",
       "@vaadin/list-box": "22.0.4",
@@ -208,6 +230,7 @@
       "@vaadin/vaadin-date-picker": "22.0.4",
       "@vaadin/vaadin-date-time-picker": "22.0.4",
       "@vaadin/vaadin-details": "22.0.4",
+      "@vaadin/vaadin-development-mode-detector": "2.0.5",
       "@vaadin/vaadin-dialog": "22.0.4",
       "@vaadin/vaadin-form-layout": "22.0.4",
       "@vaadin/vaadin-grid": "22.0.4",
@@ -216,6 +239,7 @@
       "@vaadin/vaadin-icons": "22.0.4",
       "@vaadin/vaadin-item": "22.0.4",
       "@vaadin/vaadin-list-box": "22.0.4",
+      "@vaadin/vaadin-list-mixin": "22.0.4",
       "@vaadin/vaadin-login": "22.0.4",
       "@vaadin/vaadin-lumo-styles": "22.0.4",
       "@vaadin/vaadin-material-styles": "22.0.4",
@@ -223,6 +247,7 @@
       "@vaadin/vaadin-messages": "22.0.4",
       "@vaadin/vaadin-notification": "22.0.4",
       "@vaadin/vaadin-ordered-layout": "22.0.4",
+      "@vaadin/vaadin-overlay": "22.0.4",
       "@vaadin/vaadin-progress-bar": "22.0.4",
       "@vaadin/vaadin-radio-button": "22.0.4",
       "@vaadin/vaadin-rich-text-editor": "22.0.4",
@@ -230,13 +255,16 @@
       "@vaadin/vaadin-shrinkwrap": "22.0.5",
       "@vaadin/vaadin-split-layout": "22.0.4",
       "@vaadin/vaadin-tabs": "22.0.4",
+      "@vaadin/vaadin-template-renderer": "22.0.4",
       "@vaadin/vaadin-text-field": "22.0.4",
       "@vaadin/vaadin-themable-mixin": "22.0.4",
       "@vaadin/vaadin-time-picker": "22.0.4",
       "@vaadin/vaadin-upload": "22.0.4",
+      "@vaadin/vaadin-usage-statistics": "2.1.2",
       "@vaadin/vaadin-virtual-list": "22.0.4",
       "@vaadin/vertical-layout": "22.0.4",
       "@vaadin/virtual-list": "22.0.4",
+      "@webcomponents/shadycss": "1.9.6",
       "construct-style-sheets-polyfill": "3.0.4",
       "date-fns": "2.23.0",
       "lit": "2.0.0"
@@ -263,6 +291,6 @@
       "workbox-precaching": "6.4.2",
       "workbox-webpack-plugin": "6.4.2"
     },
-    "hash": "71648ff5a79081dc4777e8494735033fc1cb2a901c120df2a273b2922e2fce3e"
+    "hash": "4afc602038e2f9b7d3f47fe64bd50a235e6c92401316123a635a330ed4672168"
   }
 }
