--- a/package.json
+++ b/package.json
@@ -313,11 +313,9 @@
     "@vaadin/icons": "$@vaadin/icons",
     "@vaadin/input-container": "$@vaadin/input-container",
     "@vaadin/integer-field": "$@vaadin/integer-field",
-    "@polymer/iron-a11y-announcer": "$@polymer/iron-a11y-announcer",
     "@polymer/iron-icon": "$@polymer/iron-icon",
     "@polymer/iron-iconset-svg": "$@polymer/iron-iconset-svg",
     "@polymer/iron-list": "$@polymer/iron-list",
-    "@polymer/iron-media-query": "$@polymer/iron-media-query",
     "@polymer/iron-meta": "$@polymer/iron-meta",
     "@polymer/iron-resizable-behavior": "$@polymer/iron-resizable-behavior",
     "@vaadin/item": "$@vaadin/item",
@@ -397,6 +395,14 @@
     "@vaadin/vaadin-cookie-consent": "$@vaadin/vaadin-cookie-consent",
     "@vaadin/vaadin-crud": "$@vaadin/vaadin-crud",
     "@vaadin/vaadin-grid-pro": "$@vaadin/vaadin-grid-pro",
-    "@vaadin/vaadin-rich-text-editor": "$@vaadin/vaadin-rich-text-editor"
+    "@vaadin/vaadin-rich-text-editor": "$@vaadin/vaadin-rich-text-editor",
+    "@vaadin/bundles": "$@vaadin/bundles",
+    "@vaadin/map": "$@vaadin/map",
+    "@polymer/polymer": "$@polymer/polymer",
+    "@vaadin/common-frontend": "$@vaadin/common-frontend",
+    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
+    "date-fns": "$date-fns",
+    "lit": "$lit",
+    "chokidar": "$chokidar"
   }
 }
