--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,14 @@
     <properties>
         <java.version>11</java.version>
         <vaadin.version>23.1.0.beta2</vaadin.version>
+        <vaadin.version>23.0.9</vaadin.version>
+        <selenium.version>4.1.2</selenium.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.7</version>
+        <version>2.7.0</version>
     </parent>
 
     <repositories>
@@ -120,7 +122,7 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.0.3</version>
+            <version>5.1.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
