--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <java.version>11</java.version>
         <vaadin.version>23.0.9</vaadin.version>
+        <selenium.version>4.1.2</selenium.version>
     </properties>
 
     <parent>
@@ -120,7 +121,7 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.0.3</version>
+            <version>5.1.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
