--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,14 @@
     <properties>
         <java.version>11</java.version>
         <vaadin.version>23.2.0.beta2</vaadin.version>
+        <flow.version>23.2.jakarta-servlet5-SNAPSHOT</flow.version>
         <selenium.version>4.4.0</selenium.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.3</version>
+        <version>3.0.0-M4</version>
     </parent>
 
     <repositories>
@@ -46,6 +47,11 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+
+        <repository>
+            <id>spring milestones</id>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -63,10 +69,22 @@
                 https://maven.vaadin.com/vaadin-prereleases/
             </url>
         </pluginRepository>
+
+        <pluginRepository>
+            <id>spring milestones</id>
+            <url>https://repo.spring.io/milestone</url>
+        </pluginRepository>
     </pluginRepositories>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>flow-bom</artifactId>
+                <version>${flow.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-bom</artifactId>
