--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,10 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-
+        <repository>
+            <id>apache snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots</url>
+        </repository>
         <repository>
             <id>spring milestones</id>
             <url>https://repo.spring.io/milestone</url>
