--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <vaadin.version>23.2.0.beta2</vaadin.version>
         <flow.version>24.0.0.alpha1</flow.version>
         <selenium.version>4.4.0</selenium.version>
@@ -47,7 +47,10 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-
+        <repository>
+            <id>apache snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots</url>
+        </repository>
         <repository>
             <id>spring milestones</id>
             <url>https://repo.spring.io/milestone</url>
