--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <java.version>11</java.version>
-        <vaadin.version>23.3-SNAPSHOT</vaadin.version>
+        <vaadin.version>23.3.0.alpha1</vaadin.version>
         <selenium.version>4.4.0</selenium.version>
     </properties>
 
