--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <java.version>11</java.version>
         <vaadin.version>23.2.3</vaadin.version>
+        <selenium.version>4.4.0</selenium.version>
     </properties>
 
     <parent>
