chore: reduce verbosity in output
CI server logs is huge with new selenium versions

--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,8 @@
                         <configuration>
                             <trimStackTrace>false</trimStackTrace>
                             <enableAssertions>true</enableAssertions>
+                            <!-- selenium is so much verbose -->
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                         </configuration>
                     </plugin>
                 </plugins>
