chore: redirect test output to a file (#869)
CI server logs is huge with new selenium versions

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <vaadin.version>23.2.3</vaadin.version>
         <!-- this parameter is needed as spring-boot bom overwrites it -->
         <selenium.version>4.4.0</selenium.version>
+        <!-- selenium is so much verbose -->
+        <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>        
     </properties>
 
     <parent>
