--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,15 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>23.2.0.beta2</vaadin.version>
-        <flow.version>24.0.0.alpha1</flow.version>
+        <vaadin.version>23.2.4</vaadin.version>
+        <flow.version>24.0.0.alpha2</flow.version>
         <selenium.version>4.4.0</selenium.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0-M4</version>
+        <version>3.0.0-M5</version>
     </parent>
 
     <repositories>
