--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 // You might want to change the configurations to fit your preferences
 // For more information about the configurations, please refer to http://www.typescriptlang.org/docs/handbook/tsconfig-json.html
 {
+  "flow_version": "23.3.0",
   "compilerOptions": {
     "sourceMap": true,
     "inlineSources": true,
