--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
+    "@vaadin-component-factory/vcf-nav": "1.0.6",
     "@vaadin/accordion": "24.0.0-alpha6",
     "@vaadin/app-layout": "24.0.0-alpha6",
     "@vaadin/avatar": "24.0.0-alpha6",
@@ -73,6 +74,7 @@
     "@vaadin/virtual-list": "24.0.0-alpha6",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
+    "line-awesome": "1.3.0",
     "lit": "2.4.1",
     "proj4": "2.8.0"
   },
@@ -165,11 +167,14 @@
     "@polymer/polymer": "$@polymer/polymer",
     "proj4": "$proj4",
     "date-fns": "$date-fns",
-    "@vaadin/overlay": "$@vaadin/overlay"
+    "@vaadin/overlay": "$@vaadin/overlay",
+    "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
+    "line-awesome": "$line-awesome"
   },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
+      "@vaadin-component-factory/vcf-nav": "1.0.6",
       "@vaadin/accordion": "24.0.0-alpha6",
       "@vaadin/app-layout": "24.0.0-alpha6",
       "@vaadin/avatar": "24.0.0-alpha6",
@@ -240,6 +245,7 @@
       "@vaadin/virtual-list": "24.0.0-alpha6",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
+      "line-awesome": "1.3.0",
       "lit": "2.4.1",
       "proj4": "2.8.0"
     },
@@ -259,6 +265,6 @@
       "workbox-core": "6.5.0",
       "workbox-precaching": "6.5.0"
     },
-    "hash": "4177e060f3fdcfff4f6794a60badaf747c562580e86430f5c847355869a6e621"
+    "hash": "22e093fff86e85e7ce3fbcbfe7b14b16703a3bf493b01b13ff955429088f26ec"
   }
 }
