Ugprade to Vaadin 24 alpha7

--- a/package.json
+++ b/package.json
@@ -3,81 +3,81 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/accordion": "24.0.0-alpha6",
-    "@vaadin/app-layout": "24.0.0-alpha6",
-    "@vaadin/avatar": "24.0.0-alpha6",
-    "@vaadin/avatar-group": "24.0.0-alpha6",
-    "@vaadin/board": "24.0.0-alpha6",
-    "@vaadin/bundles": "24.0.0-alpha6",
-    "@vaadin/button": "24.0.0-alpha6",
-    "@vaadin/charts": "24.0.0-alpha6",
-    "@vaadin/checkbox": "24.0.0-alpha6",
-    "@vaadin/checkbox-group": "24.0.0-alpha6",
-    "@vaadin/combo-box": "24.0.0-alpha6",
+    "@vaadin/accordion": "24.0.0-alpha7",
+    "@vaadin/app-layout": "24.0.0-alpha7",
+    "@vaadin/avatar": "24.0.0-alpha7",
+    "@vaadin/avatar-group": "24.0.0-alpha7",
+    "@vaadin/board": "24.0.0-alpha7",
+    "@vaadin/bundles": "24.0.0-alpha7",
+    "@vaadin/button": "24.0.0-alpha7",
+    "@vaadin/charts": "24.0.0-alpha7",
+    "@vaadin/checkbox": "24.0.0-alpha7",
+    "@vaadin/checkbox-group": "24.0.0-alpha7",
+    "@vaadin/combo-box": "24.0.0-alpha7",
     "@vaadin/common-frontend": "0.0.17",
-    "@vaadin/component-base": "24.0.0-alpha6",
-    "@vaadin/confirm-dialog": "24.0.0-alpha6",
-    "@vaadin/context-menu": "24.0.0-alpha6",
-    "@vaadin/cookie-consent": "24.0.0-alpha6",
-    "@vaadin/crud": "24.0.0-alpha6",
-    "@vaadin/custom-field": "24.0.0-alpha6",
-    "@vaadin/date-picker": "24.0.0-alpha6",
-    "@vaadin/date-time-picker": "24.0.0-alpha6",
-    "@vaadin/details": "24.0.0-alpha6",
-    "@vaadin/dialog": "24.0.0-alpha6",
-    "@vaadin/email-field": "24.0.0-alpha6",
-    "@vaadin/field-base": "24.0.0-alpha6",
-    "@vaadin/field-highlighter": "24.0.0-alpha6",
-    "@vaadin/form-layout": "24.0.0-alpha6",
-    "@vaadin/grid": "24.0.0-alpha6",
-    "@vaadin/grid-pro": "24.0.0-alpha6",
-    "@vaadin/horizontal-layout": "24.0.0-alpha6",
-    "@vaadin/icon": "24.0.0-alpha6",
-    "@vaadin/icons": "24.0.0-alpha6",
-    "@vaadin/input-container": "24.0.0-alpha6",
-    "@vaadin/integer-field": "24.0.0-alpha6",
-    "@vaadin/item": "24.0.0-alpha6",
-    "@vaadin/list-box": "24.0.0-alpha6",
-    "@vaadin/lit-renderer": "24.0.0-alpha6",
-    "@vaadin/login": "24.0.0-alpha6",
-    "@vaadin/map": "24.0.0-alpha6",
-    "@vaadin/menu-bar": "24.0.0-alpha6",
-    "@vaadin/message-input": "24.0.0-alpha6",
-    "@vaadin/message-list": "24.0.0-alpha6",
-    "@vaadin/multi-select-combo-box": "24.0.0-alpha6",
-    "@vaadin/notification": "24.0.0-alpha6",
-    "@vaadin/number-field": "24.0.0-alpha6",
-    "@vaadin/overlay": "24.0.0-alpha6",
-    "@vaadin/password-field": "24.0.0-alpha6",
-    "@vaadin/polymer-legacy-adapter": "24.0.0-alpha6",
-    "@vaadin/progress-bar": "24.0.0-alpha6",
-    "@vaadin/radio-group": "24.0.0-alpha6",
-    "@vaadin/rich-text-editor": "24.0.0-alpha6",
+    "@vaadin/component-base": "24.0.0-alpha7",
+    "@vaadin/confirm-dialog": "24.0.0-alpha7",
+    "@vaadin/context-menu": "24.0.0-alpha7",
+    "@vaadin/cookie-consent": "24.0.0-alpha7",
+    "@vaadin/crud": "24.0.0-alpha7",
+    "@vaadin/custom-field": "24.0.0-alpha7",
+    "@vaadin/date-picker": "24.0.0-alpha7",
+    "@vaadin/date-time-picker": "24.0.0-alpha7",
+    "@vaadin/details": "24.0.0-alpha7",
+    "@vaadin/dialog": "24.0.0-alpha7",
+    "@vaadin/email-field": "24.0.0-alpha7",
+    "@vaadin/field-base": "24.0.0-alpha7",
+    "@vaadin/field-highlighter": "24.0.0-alpha7",
+    "@vaadin/form-layout": "24.0.0-alpha7",
+    "@vaadin/grid": "24.0.0-alpha7",
+    "@vaadin/grid-pro": "24.0.0-alpha7",
+    "@vaadin/horizontal-layout": "24.0.0-alpha7",
+    "@vaadin/icon": "24.0.0-alpha7",
+    "@vaadin/icons": "24.0.0-alpha7",
+    "@vaadin/input-container": "24.0.0-alpha7",
+    "@vaadin/integer-field": "24.0.0-alpha7",
+    "@vaadin/item": "24.0.0-alpha7",
+    "@vaadin/list-box": "24.0.0-alpha7",
+    "@vaadin/lit-renderer": "24.0.0-alpha7",
+    "@vaadin/login": "24.0.0-alpha7",
+    "@vaadin/map": "24.0.0-alpha7",
+    "@vaadin/menu-bar": "24.0.0-alpha7",
+    "@vaadin/message-input": "24.0.0-alpha7",
+    "@vaadin/message-list": "24.0.0-alpha7",
+    "@vaadin/multi-select-combo-box": "24.0.0-alpha7",
+    "@vaadin/notification": "24.0.0-alpha7",
+    "@vaadin/number-field": "24.0.0-alpha7",
+    "@vaadin/overlay": "24.0.0-alpha7",
+    "@vaadin/password-field": "24.0.0-alpha7",
+    "@vaadin/polymer-legacy-adapter": "24.0.0-alpha7",
+    "@vaadin/progress-bar": "24.0.0-alpha7",
+    "@vaadin/radio-group": "24.0.0-alpha7",
+    "@vaadin/rich-text-editor": "24.0.0-alpha7",
     "@vaadin/router": "1.7.4",
-    "@vaadin/scroller": "24.0.0-alpha6",
-    "@vaadin/select": "24.0.0-alpha6",
-    "@vaadin/split-layout": "24.0.0-alpha6",
-    "@vaadin/tabs": "24.0.0-alpha6",
-    "@vaadin/tabsheet": "24.0.0-alpha6",
-    "@vaadin/text-area": "24.0.0-alpha6",
-    "@vaadin/text-field": "24.0.0-alpha6",
-    "@vaadin/time-picker": "24.0.0-alpha6",
-    "@vaadin/tooltip": "24.0.0-alpha6",
-    "@vaadin/upload": "24.0.0-alpha6",
+    "@vaadin/scroller": "24.0.0-alpha7",
+    "@vaadin/select": "24.0.0-alpha7",
+    "@vaadin/split-layout": "24.0.0-alpha7",
+    "@vaadin/tabs": "24.0.0-alpha7",
+    "@vaadin/tabsheet": "24.0.0-alpha7",
+    "@vaadin/text-area": "24.0.0-alpha7",
+    "@vaadin/text-field": "24.0.0-alpha7",
+    "@vaadin/time-picker": "24.0.0-alpha7",
+    "@vaadin/tooltip": "24.0.0-alpha7",
+    "@vaadin/upload": "24.0.0-alpha7",
     "@vaadin/vaadin-development-mode-detector": "2.0.5",
-    "@vaadin/vaadin-lumo-styles": "24.0.0-alpha6",
-    "@vaadin/vaadin-material-styles": "24.0.0-alpha6",
-    "@vaadin/vaadin-themable-mixin": "24.0.0-alpha6",
+    "@vaadin/vaadin-lumo-styles": "24.0.0-alpha7",
+    "@vaadin/vaadin-material-styles": "24.0.0-alpha7",
+    "@vaadin/vaadin-themable-mixin": "24.0.0-alpha7",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.0.0-alpha6",
-    "@vaadin/virtual-list": "24.0.0-alpha6",
+    "@vaadin/vertical-layout": "24.0.0-alpha7",
+    "@vaadin/virtual-list": "24.0.0-alpha7",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
     "lit": "2.4.1",
     "proj4": "2.8.0"
   },
   "devDependencies": {
-    "@rollup/plugin-replace": "3.1.0",
+    "@rollup/plugin-replace": "5.0.1",
     "@rollup/pluginutils": "4.1.0",
     "async": "3.2.2",
     "glob": "7.2.3",
@@ -86,11 +86,11 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "4.9.3",
-    "vite": "v4.0.0",
-    "vite-plugin-checker": "0.5.1",
+    "vite": "4.0.2",
+    "vite-plugin-checker": "0.5.2",
     "workbox-build": "6.5.0",
-    "workbox-core": "6.5.0",
-    "workbox-precaching": "6.5.0"
+    "workbox-core": "6.5.4",
+    "workbox-precaching": "6.5.4"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -170,81 +170,81 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/accordion": "24.0.0-alpha6",
-      "@vaadin/app-layout": "24.0.0-alpha6",
-      "@vaadin/avatar": "24.0.0-alpha6",
-      "@vaadin/avatar-group": "24.0.0-alpha6",
-      "@vaadin/board": "24.0.0-alpha6",
-      "@vaadin/bundles": "24.0.0-alpha6",
-      "@vaadin/button": "24.0.0-alpha6",
-      "@vaadin/charts": "24.0.0-alpha6",
-      "@vaadin/checkbox": "24.0.0-alpha6",
-      "@vaadin/checkbox-group": "24.0.0-alpha6",
-      "@vaadin/combo-box": "24.0.0-alpha6",
+      "@vaadin/accordion": "24.0.0-alpha7",
+      "@vaadin/app-layout": "24.0.0-alpha7",
+      "@vaadin/avatar": "24.0.0-alpha7",
+      "@vaadin/avatar-group": "24.0.0-alpha7",
+      "@vaadin/board": "24.0.0-alpha7",
+      "@vaadin/bundles": "24.0.0-alpha7",
+      "@vaadin/button": "24.0.0-alpha7",
+      "@vaadin/charts": "24.0.0-alpha7",
+      "@vaadin/checkbox": "24.0.0-alpha7",
+      "@vaadin/checkbox-group": "24.0.0-alpha7",
+      "@vaadin/combo-box": "24.0.0-alpha7",
       "@vaadin/common-frontend": "0.0.17",
-      "@vaadin/component-base": "24.0.0-alpha6",
-      "@vaadin/confirm-dialog": "24.0.0-alpha6",
-      "@vaadin/context-menu": "24.0.0-alpha6",
-      "@vaadin/cookie-consent": "24.0.0-alpha6",
-      "@vaadin/crud": "24.0.0-alpha6",
-      "@vaadin/custom-field": "24.0.0-alpha6",
-      "@vaadin/date-picker": "24.0.0-alpha6",
-      "@vaadin/date-time-picker": "24.0.0-alpha6",
-      "@vaadin/details": "24.0.0-alpha6",
-      "@vaadin/dialog": "24.0.0-alpha6",
-      "@vaadin/email-field": "24.0.0-alpha6",
-      "@vaadin/field-base": "24.0.0-alpha6",
-      "@vaadin/field-highlighter": "24.0.0-alpha6",
-      "@vaadin/form-layout": "24.0.0-alpha6",
-      "@vaadin/grid": "24.0.0-alpha6",
-      "@vaadin/grid-pro": "24.0.0-alpha6",
-      "@vaadin/horizontal-layout": "24.0.0-alpha6",
-      "@vaadin/icon": "24.0.0-alpha6",
-      "@vaadin/icons": "24.0.0-alpha6",
-      "@vaadin/input-container": "24.0.0-alpha6",
-      "@vaadin/integer-field": "24.0.0-alpha6",
-      "@vaadin/item": "24.0.0-alpha6",
-      "@vaadin/list-box": "24.0.0-alpha6",
-      "@vaadin/lit-renderer": "24.0.0-alpha6",
-      "@vaadin/login": "24.0.0-alpha6",
-      "@vaadin/map": "24.0.0-alpha6",
-      "@vaadin/menu-bar": "24.0.0-alpha6",
-      "@vaadin/message-input": "24.0.0-alpha6",
-      "@vaadin/message-list": "24.0.0-alpha6",
-      "@vaadin/multi-select-combo-box": "24.0.0-alpha6",
-      "@vaadin/notification": "24.0.0-alpha6",
-      "@vaadin/number-field": "24.0.0-alpha6",
-      "@vaadin/overlay": "24.0.0-alpha6",
-      "@vaadin/password-field": "24.0.0-alpha6",
-      "@vaadin/polymer-legacy-adapter": "24.0.0-alpha6",
-      "@vaadin/progress-bar": "24.0.0-alpha6",
-      "@vaadin/radio-group": "24.0.0-alpha6",
-      "@vaadin/rich-text-editor": "24.0.0-alpha6",
+      "@vaadin/component-base": "24.0.0-alpha7",
+      "@vaadin/confirm-dialog": "24.0.0-alpha7",
+      "@vaadin/context-menu": "24.0.0-alpha7",
+      "@vaadin/cookie-consent": "24.0.0-alpha7",
+      "@vaadin/crud": "24.0.0-alpha7",
+      "@vaadin/custom-field": "24.0.0-alpha7",
+      "@vaadin/date-picker": "24.0.0-alpha7",
+      "@vaadin/date-time-picker": "24.0.0-alpha7",
+      "@vaadin/details": "24.0.0-alpha7",
+      "@vaadin/dialog": "24.0.0-alpha7",
+      "@vaadin/email-field": "24.0.0-alpha7",
+      "@vaadin/field-base": "24.0.0-alpha7",
+      "@vaadin/field-highlighter": "24.0.0-alpha7",
+      "@vaadin/form-layout": "24.0.0-alpha7",
+      "@vaadin/grid": "24.0.0-alpha7",
+      "@vaadin/grid-pro": "24.0.0-alpha7",
+      "@vaadin/horizontal-layout": "24.0.0-alpha7",
+      "@vaadin/icon": "24.0.0-alpha7",
+      "@vaadin/icons": "24.0.0-alpha7",
+      "@vaadin/input-container": "24.0.0-alpha7",
+      "@vaadin/integer-field": "24.0.0-alpha7",
+      "@vaadin/item": "24.0.0-alpha7",
+      "@vaadin/list-box": "24.0.0-alpha7",
+      "@vaadin/lit-renderer": "24.0.0-alpha7",
+      "@vaadin/login": "24.0.0-alpha7",
+      "@vaadin/map": "24.0.0-alpha7",
+      "@vaadin/menu-bar": "24.0.0-alpha7",
+      "@vaadin/message-input": "24.0.0-alpha7",
+      "@vaadin/message-list": "24.0.0-alpha7",
+      "@vaadin/multi-select-combo-box": "24.0.0-alpha7",
+      "@vaadin/notification": "24.0.0-alpha7",
+      "@vaadin/number-field": "24.0.0-alpha7",
+      "@vaadin/overlay": "24.0.0-alpha7",
+      "@vaadin/password-field": "24.0.0-alpha7",
+      "@vaadin/polymer-legacy-adapter": "24.0.0-alpha7",
+      "@vaadin/progress-bar": "24.0.0-alpha7",
+      "@vaadin/radio-group": "24.0.0-alpha7",
+      "@vaadin/rich-text-editor": "24.0.0-alpha7",
       "@vaadin/router": "1.7.4",
-      "@vaadin/scroller": "24.0.0-alpha6",
-      "@vaadin/select": "24.0.0-alpha6",
-      "@vaadin/split-layout": "24.0.0-alpha6",
-      "@vaadin/tabs": "24.0.0-alpha6",
-      "@vaadin/tabsheet": "24.0.0-alpha6",
-      "@vaadin/text-area": "24.0.0-alpha6",
-      "@vaadin/text-field": "24.0.0-alpha6",
-      "@vaadin/time-picker": "24.0.0-alpha6",
-      "@vaadin/tooltip": "24.0.0-alpha6",
-      "@vaadin/upload": "24.0.0-alpha6",
+      "@vaadin/scroller": "24.0.0-alpha7",
+      "@vaadin/select": "24.0.0-alpha7",
+      "@vaadin/split-layout": "24.0.0-alpha7",
+      "@vaadin/tabs": "24.0.0-alpha7",
+      "@vaadin/tabsheet": "24.0.0-alpha7",
+      "@vaadin/text-area": "24.0.0-alpha7",
+      "@vaadin/text-field": "24.0.0-alpha7",
+      "@vaadin/time-picker": "24.0.0-alpha7",
+      "@vaadin/tooltip": "24.0.0-alpha7",
+      "@vaadin/upload": "24.0.0-alpha7",
       "@vaadin/vaadin-development-mode-detector": "2.0.5",
-      "@vaadin/vaadin-lumo-styles": "24.0.0-alpha6",
-      "@vaadin/vaadin-material-styles": "24.0.0-alpha6",
-      "@vaadin/vaadin-themable-mixin": "24.0.0-alpha6",
+      "@vaadin/vaadin-lumo-styles": "24.0.0-alpha7",
+      "@vaadin/vaadin-material-styles": "24.0.0-alpha7",
+      "@vaadin/vaadin-themable-mixin": "24.0.0-alpha7",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.0.0-alpha6",
-      "@vaadin/virtual-list": "24.0.0-alpha6",
+      "@vaadin/vertical-layout": "24.0.0-alpha7",
+      "@vaadin/virtual-list": "24.0.0-alpha7",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
       "lit": "2.4.1",
       "proj4": "2.8.0"
     },
     "devDependencies": {
-      "@rollup/plugin-replace": "3.1.0",
+      "@rollup/plugin-replace": "5.0.1",
       "@rollup/pluginutils": "4.1.0",
       "async": "3.2.2",
       "glob": "7.2.3",
@@ -253,12 +253,12 @@
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "4.9.3",
-      "vite": "v4.0.0",
-      "vite-plugin-checker": "0.5.1",
+      "vite": "4.0.2",
+      "vite-plugin-checker": "0.5.2",
       "workbox-build": "6.5.0",
-      "workbox-core": "6.5.0",
-      "workbox-precaching": "6.5.0"
+      "workbox-core": "6.5.4",
+      "workbox-precaching": "6.5.4"
     },
-    "hash": "4177e060f3fdcfff4f6794a60badaf747c562580e86430f5c847355869a6e621"
+    "hash": "79f34eeaa4b6bed6d1ef0fdbc023d2362e8e0ddbfcfd02868e67420eff467cfa"
   }
 }
