--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "lit-plugin.strict": true
+    "lit-plugin.strict": true,
+    "typescript.preferences.includePackageJsonAutoImports": "on"
 }
