--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>24.0.0.alpha9</vaadin.version>
-        <selenium.version>4.7.2</selenium.version>
+        <vaadin.version>24.0.0.beta1</vaadin.version>
+        <selenium.version>4.8.0</selenium.version>
     </properties>
 
     <parent>
